# rimeterm

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  LICENSE  MOUSE_CONFLICT_FIX.md  README.md  bootstrap-essentials.mjs  layout-refactor-plan.md  layout-refactor-summary.md  rust-toolchain.toml
.githooks/: pre-commit
.github/scripts/: fetch-essentials.mjs
.github/workflows/: ci.yml  release.yml
assets/bottom/seeds/: bottom.toml
assets/gitui/seeds/: key_bindings.ron  theme.ron
assets/yazi/plugins/chafa.yazi/: LICENSE  README.md  main.lua
assets/yazi/plugins/glow.yazi/: README.md  main.lua
assets/yazi/plugins/rimeterm-bridge.yazi/: README.md  main.lua
assets/yazi/seeds/: init.lua  package.toml  yazi.toml
crates/rimectl/: Cargo.toml
crates/rimectl/src/: main.rs
crates/rimeterm/: Cargo.toml  build.rs
crates/rimeterm-config/: Cargo.toml
crates/rimeterm-config/src/: agents_state.rs  assets.rs  env.rs  install_hint.rs  layout_state.rs  lib.rs  paths.rs  test_util.rs  tools.rs
crates/rimeterm-core/: Cargo.toml
crates/rimeterm-core/src/: app_menu.rs  command.rs  event.rs  focus.rs  layout.rs  lib.rs  pane.rs  tabs.rs
crates/rimeterm-ipc/: Cargo.toml
crates/rimeterm-ipc/src/: client.rs  endpoint.rs  lib.rs  pid_liveness.rs  protocol.rs  server.rs
crates/rimeterm-ipc/tests/: round_trip.rs
crates/rimeterm-pty/: Cargo.toml
crates/rimeterm-pty/src/: agent_detect.rs  agent_registry.rs  lib.rs  osc_bridge.rs  resize_throttle.rs  session.rs  shell_detect.rs
crates/rimeterm-pty/tests/: session_clone.rs
crates/rimeterm-tui/: Cargo.toml
crates/rimeterm-tui/src/: agent_factory.rs  app.rs  keymap.rs  lib.rs  menu.rs  palette.rs  pane_registry.rs  picker.rs  placeholder_pane.rs  pty_pane.rs  pty_selection.rs  settings.rs  shell_factory.rs  status_bar.rs  tab_strip.rs  terminal.rs  viewer.rs
crates/rimeterm/debian/: postinst  prerm
crates/rimeterm/src/: main.rs
crates/rimeterm/wix/: main.wxs
essentials/: VERSIONS.toml
