[workspace]
resolver = "2"
members = [
    "crates/rimeterm",
    "crates/rimeterm-core",
    "crates/rimeterm-config",
    "crates/rimeterm-pty",
    "crates/rimeterm-ipc",
    "crates/rimectl",
    "crates/rimeterm-tui",
]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"
authors = ["cjzzz <zisheng.cao@protonmail.com>"]
repository = "https://github.com/caozisheng/rimeterm"
description = "TUI-native terminal built for coding agents."

[workspace.dependencies]
# workspace-internal
rimeterm-core   = { path = "crates/rimeterm-core",   version = "0.1.6" }
rimeterm-config = { path = "crates/rimeterm-config", version = "0.1.6" }
rimeterm-pty    = { path = "crates/rimeterm-pty",    version = "0.1.6" }
rimeterm-tui    = { path = "crates/rimeterm-tui",    version = "0.1.6" }

rimeterm-ipc    = { path = "crates/rimeterm-ipc",    version = "0.1.6" }
# third-party
tokio         = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-util", "time"] }
tokio-stream  = { version = "0.1", features = ["sync"] }
crossterm     = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
ratatui       = { version = "0.30", default-features = false, features = ["crossterm", "std"] }
serde         = { version = "1", features = ["derive"] }
toml          = "0.9"
alacritty_terminal = "0.26" # C17: default vt backend (migrated from vt100)
portable-pty  = "0.9"
anyhow        = "1"
thiserror     = "2"
bytes         = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which         = "8"
directories   = "6"
unicode-width = "0.2"
# C22.6 mouse selection: cross-platform system clipboard access. Default
# features cover Windows/macOS/X11; we skip the optional Wayland (wl-clipboard)
# extra because the X11 fallback is fine on wl-roots compositors via XWayland.
arboard       = { version = "3", default-features = false }
# C20 viewer overlay (§19.11)
tui-markdown  = { version = "0.3.8", default-features = false }
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image         = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

[workspace.lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
needless_pass_by_value = "warn"
redundant_clone = "warn"
