[package]
name = "rimeterm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kernel primitives for rimeterm: Pane, EventBus, Commands, AppMenu."

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
thiserror = { workspace = true }
