[package]
name = "rimeterm-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local IPC for rimeterm: line-delimited JSON over named pipe (Windows) or Unix domain socket."

[lints]
workspace = true

[dependencies]
rimeterm-core = { workspace = true }
rimeterm-config = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true, features = ["net", "fs", "io-util", "rt-multi-thread", "sync", "macros", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
