[package]
name = "rimeterm-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PTY host: portable-pty + alacritty_terminal parser + shell detection."

[lints]
workspace = true

[dependencies]
rimeterm-core = { workspace = true }
portable-pty = { workspace = true }
alacritty_terminal = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }
serde = { workspace = true }
parking_lot = "0.12"
