[package]
name = "rimeterm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal built for coding agents."
default-run = "rimeterm"
build = "build.rs"

[[bin]]
name = "rimeterm"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
rimeterm-core = { workspace = true }
rimeterm-config = { workspace = true }
rimeterm-tui = { workspace = true }
rimeterm-pty = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Windows-only: embed assets/rimeterm.ico into the .exe as the Win32 icon
# resource picked up by Explorer, the taskbar, and Alt+Tab. Optional on
# other platforms (the build script is a no-op there).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
