[package]
name = "rimeterm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal built for coding agents."
default-run = "rimeterm"
build = "build.rs"

[[bin]]
name = "rimeterm"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
rimeterm-core = { workspace = true }
rimeterm-config = { workspace = true }
rimeterm-tui = { workspace = true }
rimeterm-pty = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Windows-only: embed assets/rimeterm.ico into the .exe as the Win32 icon
# resource picked up by Explorer, the taskbar, and Alt+Tab. Optional on
# other platforms (the build script is a no-op there).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Linux .deb metadata used by `cargo-deb`. Only the fields not already
# derivable from [package] need to be listed. `assets` explicitly lists
# both binaries so cargo-deb doesn't miss `rimectl` (it defaults to
# `[[bin]].name` == package name → only picks up `rimeterm`).
#
# Depends on nothing — rimeterm is statically linked apart from libc.
[package.metadata.deb]
maintainer = "cjzzz <zisheng.cao@protonmail.com>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rimeterm", "usr/bin/", "755"],
    ["target/release/rimectl",  "usr/bin/", "755"],
    ["README.md",               "usr/share/doc/rimeterm/README",         "644"],
    ["LICENSE",                 "usr/share/doc/rimeterm/copyright",      "644"],
    ["ACKNOWLEDGEMENTS.md",     "usr/share/doc/rimeterm/ACKNOWLEDGEMENTS","644"],
]
extended-description = """\
A TUI terminal built for coding agents (Claude Code, Codex, Cursor,
Gemini CLI, and others). Ratatui front-end, portable-pty backend,
alacritty_terminal VT parser.
"""

# Windows .msi metadata used by `cargo-wix`. The default main.wxs
# generated by `cargo wix init` lives at `wix/main.wxs`; version and
# manufacturer come from [package]. Nothing else needed at the metadata
# level for a single-crate workspace binary.
[package.metadata.wix]
upgrade-guid = "8FB03D2E-7F51-4C9E-9A11-D0A8B3C4E5F6"
path-guid = "1CA24E63-DE9A-4E2C-B0B7-7F6B4E9E1A20"
license = false
eula = false
